Fix bugs like focusing text after jump and hanging chosentasks

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1 {
   /* justify-items: center; */
   background-color: transparent;
   border: none;
-  height: 430px;
+  height: 480px;
   overflow-y: scroll;
   grid-template-areas:
   '. . . taskHeader .'
